syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.priscila";
option java_outer_classname = "Proposta";
option objc_class_prefix = "HLW";

package br.com.zupacademy.priscila;

service PropostaService {
  rpc cadastra (NovaPropostaRequest) returns (NovaPropostaResponse) {}

  rpc consulta (ConsultaRequest) returns (ConsultaResponse){}
}
// Cadastra
message NovaPropostaRequest {
  string documento = 1;
  string email = 2;
  string nome = 3 ;
  string endereco = 4;
  string salario = 5;
}

message NovaPropostaResponse {
  string propostaId = 1;
  string email = 2;

}

// Consulta

message ConsultaRequest{
  string propostaId = 1;
}

message ConsultaResponse{
  message Cartao {
    string numero = 1;
    string limite = 2;
  }

  string email = 1;
  string nome = 2;
  string propostaId = 3;
  string status =4;
  optional Cartao cartao = 5;
}